--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.codepath.articlesearch"
+        applicationId "com.codepath.bitfitproject"
         minSdk 23
         targetSdk 32
         versionCode 1
