--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.codepath.bitfitproject.ArticleApplication"
+        android:name="com.codepath.bitfitproject.ExerciseApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,9 +16,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ArticleSearch"
         tools:targetApi="31">
-        <!-- Detail Activity -->
-        <activity android:name="com.codepath.bitfitproject.DetailActivity"
-            android:exported="true" />
         <!-- Main Activity -->
         <activity
             android:name="com.codepath.bitfitproject.MainActivity"
